Made the ruler transparent.
Made the attachment bar very short - essentially looks like plank is just below the pivot.
Enlarged and finalized the level indicators.
# 0.00.06 (55247) Aug 15, 2011
8/15/11 Publishing to dev for review by design team.
Moved x's on bottoms of support columns so that the won't be overlapped by the ruler.
Removed distance vectors (a.k.a. lever arms).
Added the snap-on ruler for showing distances.
Added mass labels and the ability to turn them on/off.
Added labels for the mystery objects.
Added animation for the removal of masses from the plank.
Made the items grabbed from the teeter totter be positioned under the mouse (they were off in some cases).
Fixed issues with humans not being positioned where the center of balance is.
Fixed issue where items could be added to center of plank.
Initial usage of KitSelectionNode
# 0.00.05 (54837) Aug 3, 2011
8/3/11 Publishing updated version to dev for review.
Improved placement of the control panels.
Moved columns so that the red x wouldn't be overlapped by force vectors.
Made it easier to place masses on the plank by using the center point rather than the bottom of the mass.
Added distance vectors.
Made the plank motion settle out more quickly (i.e. it oscillates less before becoming still).
Hooked up vector visibility to control panel.
Added vectors due to masses on the planks.
# 0.00.04 (54743) Aug 2, 2011
8/2/11 Deploying to dev again due to issues with previous deployment
# 0.00.03 (54712) Aug 1, 2011
Fixed an issue where the gradient didn't move with the attachment bar.
8/1/11 Deploying to dev for review at weekly meeting
Added control panel for vectors (but not the actual vectors yet).
Fixed: blocks look like they are sliding along the plank surface
Improved the V support shape for fulcrum above plank shape
Added support for having the pivot above the plank.
# 0.00.02 (54292) Jul 19, 2011
7/19/11 Deploying snapshot to dev
Added the "mystery masses".
Added adult to masses.