@@ -3,6 +3,7 @@ package edu.colorado.phet.balanceandtorque.teetertotter.view;
 
 import java.awt.BasicStroke;
 import java.awt.Color;
+import java.awt.Font;
 import java.awt.Shape;
 import java.awt.geom.AffineTransform;
 import java.awt.geom.Point2D;
@@ -16,9 +17,9 @@ import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTra
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.PhetPCanvas;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
-import edu.colorado.phet.common.piccolophet.nodes.HTMLNode;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.umd.cs.piccolo.PNode;
+import edu.umd.cs.piccolo.nodes.PText;
 
 /**
  * A node that represents a mass that is described by a particular shape (as
@@ -41,9 +42,7 @@ public class ShapeMassNode extends PNode {
 
     private final PhetPPath shapeNode;
 
-    private final HTMLNode massLabel = new HTMLNode( "uninitialized" ) {{
-        setFont( new PhetFont( 14 ) );
-    }};
+//    private final PNode massLabel;
 
     //-------------------------------------------------------------------------
     // Constructor(s)
@@ -54,9 +53,7 @@ public class ShapeMassNode extends PNode {
         this.mvt = mvt;
 
         // Create and add the mass label.
-        DecimalFormat formatter = new DecimalFormat( "##" );
-        // TODO: i18n, including order and units!
-        massLabel.setHTML( formatter.format( mass.getMass() ) + "<br>kg" );
+        final PNode massLabel = new MassLabelNode( mass.getMass() );
         addChild( massLabel );
 
         // Control visibility of the mass label.
@@ -76,10 +73,10 @@ public class ShapeMassNode extends PNode {
             public void apply( Shape shape ) {
                 Shape zeroOffsetShape = AffineTransform.getTranslateInstance( -mvt.modelToViewX( 0 ), -mvt.modelToViewY( 0 ) ).createTransformedShape( mvt.modelToView( shape ) );
                 shapeNode.setPathTo( zeroOffsetShape );
-//                massLabel.setScale( 1 );
-//                massLabel.setScale( Math.min( shapeNode.getFullBoundsReference().width * 0.9 / massLabel.getFullBoundsReference().width, 1 ) );
+                massLabel.setScale( 1 );
+                massLabel.setScale( Math.min( shapeNode.getFullBoundsReference().width * 0.9 / massLabel.getFullBoundsReference().width, 1 ) );
                 massLabel.setOffset( shapeNode.getFullBoundsReference().getCenterX() - massLabel.getFullBoundsReference().width / 2,
-                                     shapeNode.getFullBoundsReference().getY() - massLabel.getFullBoundsReference().height );
+                                     shapeNode.getFullBoundsReference().getY() - massLabel.getFullBoundsReference().height - 3 );
                 updatePositionAndAngle();
             }
         } );
@@ -105,5 +102,23 @@ public class ShapeMassNode extends PNode {
         setRotation( 0 );
         setOffset( mvt.modelToView( mass.getPosition() ) );
         rotate( -mass.getRotationAngle() );
+    }
+
+    private static class MassLabelNode extends PNode {
+        private static final Font FONT = new PhetFont( 14 );
+        private static final DecimalFormat FORMATTER = new DecimalFormat( "##" );
+
+        private MassLabelNode( final double mass ) {
+            final PText massText = new PText( FORMATTER.format( mass ) );
+            massText.setFont( FONT );
+            addChild( massText );
+            // TODO: i18n
+            addChild( new PText( "kg" ) {{
+                setFont( FONT );
+                // TODO: There is a tweak factor in the Y direction that may cause issues with translation.  Research better way to get label elements closer.
+                setOffset( massText.getFullBoundsReference().getCenterX() - getFullBoundsReference().width / 2,
+                           massText.getFullBoundsReference().getMaxY() - 5 );
+            }} );
+        }
     }
 }
