@@ -1,3 +1,5 @@
+Made the mass labels on shapes into two lines for better readability.
+Removed tick marks from bottom of ruler and added units label instead.
 Made the ruler transparent.
 Made the attachment bar very short - essentially looks like plank is just below the pivot.
 Enlarged and finalized the level indicators.
